# refellips

./: .gitattributes  .gitignore  BUNDLED_LICENSE  CHANGELOG.txt  INSTALL_CONTRIBUTE  LICENCE  LICENSE  MANIFEST.in  README.md  dataSE.py  objectiveSE.py  pyproject.toml  readthedocs.yml  reflect_modelSE.py  release_notes.txt  setup.cfg  setup.py  structureSE.py  testimonials.bib
demos/: EP4 Map maker.ipynb  EllipsOutput.pkl  RefnxEllipsDemo-Spectroscopic-SL.ipynb  RefnxEllipsDemo-Spectroscopic.ipynb  RefnxEllipsDemo.ipynb  WVASE_example_10nmSiO2_325nmAl2O3_MultiWavelength.txt  WVASE_example_2nmSiO2_117nmAu_MultiWavelength.txt  WVASE_example_2nmSiO2_11nmPNIPAM_658nm.txt  WVASE_example_2nmSiO2_20nmPNIPAM_50EMA_MultiWavelength.txt  WVASE_example_2nmSiO2_50nmPNIPAM_50EMA_MultiWavelength.txt  WVASE_example_30nmSiO2_Water_MultiWavelength.txt  corefine_Ellipsometry_XRR_NR.ipynb  corefine_polyBrush.ipynb  refellipsDemo.ipynb  refellipsDemo_GaussianOscillator.ipynb  refellipsDemo_Map.ipynb  refellipsDemo_Spectroscopic.ipynb  refellipsDemo_Spectroscopic_SL.ipynb  refellipsDemo_UserDefinedOscillator.ipynb  refellips_WVASE_Comparison.ipynb
docs/: conf.py  environment.yml  examples.rst  faq.rst  getting_started.ipynb  index.rst  installation.rst  modules.rst  my_objective.pkl  refellips.dataSE.rst  refellips.dispersion.rst  refellips.objectiveSE.rst  refellips.reflect_modelSE.rst  refellips.rst  refellips.structureSE.rst  requirements.txt  testimonials.rst
materials/: polymer_diffuse.csv  polystyrene.csv  water.csv
refellips/: __init__.py  _dispersion.py  dataSE.py  dispersion.py  (+3 more)
(+42 files in other folders)
