[metadata]
name = refellips
description = Ellipsometry Analysis Package
author = "Hayden Robertson, Isaac Gresham, Andrew Nelson",
author_email = andyfaff+refellips@gmail.com
license = BSD-3-Clause
url = https://github.com/refnx/refellips
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
platforms =
    Windows
    Linux
    Solaris
    Mac OS-X
    Unix
python_requires = ">=3.7"
project_urls =
    Bug Tracker = https://github.com/refnx/refellips/issues
    Source Code = https://github.com/refnx/refellips


[options]
install_requires =
    numpy
    scipy
    pandas
    scipy
    refnx

tests_require =
    pytest
    uncertainties

[options.extras_require]

[options.entry_points]
